# LZW

./: .gitignore  CMakeLists.txt  README.md
include/: encoder.h  hash.h  lzw.h  utils.h
src/: encoder.c  hash.c  lzw.c  main.c  utils.c
